Wed May 13 16:33:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_other_tests.lst:
          Added 3673

Wed May 13 16:30:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Bug_3673_Regression/*:
          Added new test for bug 3673

        * orbsvcs/tests/ior_corbaname/ior_corbaname_client_i.cpp:
          Const change

Wed May 13 13:35:00 UTC 2009  Simon Massey  <sma at prismtech dot com>

        * bin/tao_orb_tests.lst:
        * tests/Bug_3674_Regression/test.idl:
        * tests/Bug_3674_Regression/run_test.pl:
        * tests/Bug_3674_Regression/Bug_3674_Regression.mpc:
        * tests/Bug_3674_Regression/test.cpp:

          Added regression test for PICurrent TSC client corruption.

Tue May 12 08:26:55 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tests/Bug_2234_Regression/server.cpp:
        * tests/Bug_3171_Regression/server.cpp:
        * tests/DII_AMI_Forward/orb_initializer.h:

          TAO_Local_RefCounted_Object is deprecated. Changed
          it to CORBA::LocalObject.

Mon May 11 09:54:38 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/DII_AMI_Forward/server_interceptor.cpp:
          Fixed fuzz error.

Mon May 11 07:21:16 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/DII_AMI_Forward/server_interceptor.cpp:
          Fixed compile warning.

Fri May  8 19:30:55 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * examples/RTCORBA/Activity/Builder.cpp:

          Really fix fuzz.

Fri May  8 14:23:07 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tests/Bug_2234_Regression/server.cpp:
        * tests/Bug_3171_Regression/server.cpp:
        * tests/Bug_2345_Regression/server.cpp:
        * tests/DII_AMI_Forward/server_interceptor.cpp:
        * tests/DII_AMI_Forward/server_interceptor.h:
        * tests/DII_AMI_Forward/orb_initializer.h:

          Fixed memory leaks in these tests.

        * tao/ORB.cpp:
